@@ -1,3 +1,13 @@
+2006-07-25  Paolo Bonzini  <bonzini@gnu.org>
+
+	Sync from GCC:
+	2006-07-04  Eric Botcazou  <ebotcazou@libertysurf.fr>
+
+        PR bootstrap/18058
+        * configure.in: Add -fkeep-inline-functions to CFLAGS for stage 1
+        if the bootstrap compiler is a GCC version that supports it.
+        * configure: Regenerate.
+
 2006-07-22  Daniel Jacobowitz  <dan@codesourcery.com>
 
 	* configure.in: Allow mingw32 and cygwin targets to build cross-gdb.
